fixed header spacing issue for 480px media queries, added navigation slide menu

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -165,6 +165,12 @@
         }
     }
 
+    //Header 
+
+    header .headerContent {
+        padding-bottom: 200px;
+    }
+
     //Contact Section
     .contact {
 
