--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -65,6 +65,11 @@ nav {
     }
 }
 
+.slideMenu a {
+    font-family: $primary-font;
+    font-size: 1.3rem;
+}
+
 //Header-specific Typography
 
 header {
