--- a/styles/sass/partials/_variables.scss
+++ b/styles/sass/partials/_variables.scss
@@ -11,3 +11,4 @@ $quinary: #7472EC;
 $senary: #3E3CAF;
 $paragraph-color: #D7D7F2;
 $aside: #B7B7B7;
+$hover-text: #bebed8;
